Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/PKBSiteSetup__c.object-meta.xml
<CustomObject>
    <label>SDO SiteSetup</label>
    <nameField>
        <label>PKB Site Setup Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SDO Site Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>