Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Category1Description__c.field-meta.xml
<CustomField>
    <fullName>Category1Description__c</fullName>
    <label>Category 1 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>