Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Category3Description__c.field-meta.xml
<CustomField>
    <fullName>Category3Description__c</fullName>
    <label>Category 3 Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>