Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/CategoryGroupName__c.field-meta.xml
<CustomField>
    <fullName>CategoryGroupName__c</fullName>
    <inlineHelpText>The name of the category group. the Root Category must be a category of this group.</inlineHelpText>
    <label>Category Group</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>