Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Customer_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Login__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Customer Portal Login</label>
    <type>Checkbox</type>
</CustomField>