Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Customer_Portal_Login_Link__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Login_Link__c</fullName>
    <inlineHelpText>Copy and Paste the Customer Portal login URL.  It should look like:
https://na1.salesforce.com/secur/login_portal.jsp?orgId=00D30000000in6j&amp;portalId=06030000000SrY7</inlineHelpText>
    <label>Customer Portal Login URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>