Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Customer_Portal_Sign_Up__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_Sign_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Portal Sign Up</label>
    <type>Checkbox</type>
</CustomField>