Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/HomeAdText__c.field-meta.xml
<CustomField>
    <fullName>HomeAdText__c</fullName>
    <inlineHelpText>The description of the advertising in the home page.</inlineHelpText>
    <label>Home Advertising Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>