Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/HomeAdTitle__c.field-meta.xml
<CustomField>
    <fullName>HomeAdTitle__c</fullName>
    <inlineHelpText>The title of the advertising in the home page.</inlineHelpText>
    <label>Home Advertising Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>