Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Knowledge_Categories__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Categories__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge Categories</label>
    <type>Checkbox</type>
</CustomField>