Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Knowledge_Search__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Search__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Knowledge Search</label>
    <type>Checkbox</type>
</CustomField>