Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Most_Popular_Articles__c.field-meta.xml
<CustomField>
    <fullName>Most_Popular_Articles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Most Popular Articles</label>
    <type>Checkbox</type>
</CustomField>