Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Partner_Portal_Login__c.field-meta.xml
<CustomField>
    <fullName>Partner_Portal_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner Portal Login</label>
    <type>Checkbox</type>
</CustomField>