Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Portal_Branding__c.field-meta.xml
<CustomField>
    <fullName>Portal_Branding__c</fullName>
    <formula>if(
 ISPICKVAL(Portal_Branding_Source__c ,&quot;Customer Portal&quot;) , TRIM(RIGHT( Customer_Portal_Login_Link__c , 15)) ,
   if(
    ISPICKVAL(Portal_Branding_Source__c ,&quot;Partner Portal&quot;) , TRIM(RIGHT(  Partner_Portal_Login_URL__c  , 15)) , &quot;none&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Portal Branding</label>
    <type>Text</type>
</CustomField>