Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Portal_Branding_Source__c.field-meta.xml
<CustomField>
    <fullName>Portal_Branding_Source__c</fullName>
    <label>Portal Branding Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>