Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/RootCategoryName__c.field-meta.xml
<CustomField>
    <fullName>RootCategoryName__c</fullName>
    <label>Root category</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>