Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Site_Login__c.field-meta.xml
<CustomField>
    <fullName>Site_Login__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Site Login</label>
    <type>Checkbox</type>
</CustomField>