Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Tabs__c.field-meta.xml
<CustomField>
    <fullName>Tabs__c</fullName>
    <label>Tabs</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Customers (Tab to Site)</fullName>
            </value>
            <value>
                <fullName>Partners (Tab to Site)</fullName>
            </value>
            <value>
                <fullName>Knowledge</fullName>
            </value>
            <value>
                <fullName>Community (Ideas)</fullName>
            </value>
            <value>
                <fullName>Contact Us</fullName>
            </value>
            <value>
                <fullName>Answers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>