Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/W2L__c.field-meta.xml
<CustomField>
    <fullName>W2L__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web-to-Lead</label>
    <type>Checkbox</type>
</CustomField>