Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/fields/Web_to_Case__c.field-meta.xml
<CustomField>
    <fullName>Web_to_Case__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web-to-Case</label>
    <type>Checkbox</type>
</CustomField>