Reetan.Nayak Dev 25/force-app/main/default/objects/PKBSiteSetup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CategoryGroupName__c</columns>
    <columns>RootCategoryName__c</columns>
    <columns>Tabs__c</columns>
    <columns>HomeAdTitle__c</columns>
    <columns>HomeAdText__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>